rename text_highlight -> text-highlight

--- a/become-a-host/price.html
+++ b/become-a-host/price.html
@@ -407,7 +407,7 @@
                                     <label
                                       class="_1yw7hpv"
                                       for="undefined-input"
-                                      ><span class="text_highlight dir dir-ltr"
+                                      ><span class="text-highlight dir dir-ltr"
                                         >price per night</span
                                       >
                                       <div dir="ltr">
@@ -595,7 +595,7 @@
                 <div class="_1px78l2">
                   <div class="_11go4zx">
                     <div class="flex-items-center">
-                      <span class="text_highlight dir dir-ltr"
+                      <span class="text-highlight dir dir-ltr"
                         >Your progress: step 9 out of 10.</span
                       >
                       <div class="_9kv7q8">
