--- a/covidsafety.html
+++ b/covidsafety.html
@@ -2159,14 +2159,14 @@
                       </section>
                     </div>
                     <div class="footer__copyright">
-                      <span class="text_highlight dir dir-ltr">Footer section</span>
+                      <span class="text-highlight dir dir-ltr">Footer section</span>
                       <section>
                         <div class="_1udzt2s">
                           <div class="_p03egf">
                             <div class="flex">
                               <span class="_19c5bku"
                                 ><button type="button" class="_f2hxk3s">
-                                  <span class="text_highlight dir dir-ltr"
+                                  <span class="text-highlight dir dir-ltr"
                                     >Choose a language</span
                                   ><span class="_14tkmhr"
                                     ><svg
@@ -2189,7 +2189,7 @@
                                 </button></span
                               ><span class="_19c5bku"
                                 ><button type="button" class="_f2hxk3s">
-                                  <span class="text_highlight dir dir-ltr"
+                                  <span class="text-highlight dir dir-ltr"
                                     >Choose a currency</span
                                   ><span class="_14tkmhr"
                                     ><span class="_pgfqnw">₱</span></span
@@ -2229,7 +2229,7 @@
                             <div class="flex">
                               <span class="_19c5bku"
                                 ><button type="button" class="_f2hxk3s">
-                                  <span class="text_highlight dir dir-ltr"
+                                  <span class="text-highlight dir dir-ltr"
                                     >Choose a language</span
                                   ><span class="_14tkmhr"
                                     ><svg
@@ -2252,7 +2252,7 @@
                                 </button></span
                               ><span class="_19c5bku"
                                 ><button type="button" class="_f2hxk3s">
-                                  <span class="text_highlight dir dir-ltr"
+                                  <span class="text-highlight dir dir-ltr"
                                     >Choose a currency</span
                                   ><span class="_14tkmhr"
                                     ><span class="_pgfqnw">₱</span></span
@@ -2399,7 +2399,7 @@
                             <div class="flex">
                               <span class="_19c5bku"
                                 ><button type="button" class="_f2hxk3s">
-                                  <span class="text_highlight dir dir-ltr"
+                                  <span class="text-highlight dir dir-ltr"
                                     >Choose a language</span
                                   ><span class="_14tkmhr"
                                     ><svg
@@ -2422,7 +2422,7 @@
                                 </button></span
                               ><span class="_19c5bku"
                                 ><button type="button" class="_f2hxk3s">
-                                  <span class="text_highlight dir dir-ltr"
+                                  <span class="text-highlight dir dir-ltr"
                                     >Choose a currency</span
                                   ><span class="_14tkmhr"
                                     ><span class="_pgfqnw">₱</span></span
