--- a/edit/about.html
+++ b/edit/about.html
@@ -578,7 +578,7 @@ Hello! My name is Jose and I am from the Philippines! It is a pleasure to host t
                                             <span aria-hidden="true"
                                               >162/850</span
                                             ><span
-                                              class="text_highlight dir dir-ltr"
+                                              class="text-highlight dir dir-ltr"
                                               aria-atomic="true"
                                               aria-live="polite"
                                               >162 out of 850 characters
