--- a/explore-when.html
+++ b/explore-when.html
@@ -2932,7 +2932,7 @@
                                                                     id="micro-flex-chips-DLS-chipGroup-label"
                                                                   >
                                                                     <span
-                                                                      class="text_highlight dir dir-ltr"
+                                                                      class="text-highlight dir dir-ltr"
                                                                       >Flexible
                                                                       dates</span
                                                                     >
@@ -3369,7 +3369,7 @@
                                                                   id="chip-group-super_flexible_lengths-DLS-chipGroup-label"
                                                                 >
                                                                   <span
-                                                                    class="text_highlight dir dir-ltr"
+                                                                    class="text-highlight dir dir-ltr"
                                                                     >How long
                                                                     would you
                                                                     like to
@@ -3488,7 +3488,7 @@
                                                                   id="chip-group-super_flexible_dates-DLS-chipGroup-label"
                                                                 >
                                                                   <span
-                                                                    class="text_highlight dir dir-ltr"
+                                                                    class="text-highlight dir dir-ltr"
                                                                     >When do you
                                                                     want to
                                                                     go?</span
