--- a/places.html
+++ b/places.html
@@ -400,7 +400,7 @@
                                     <div class="_1epbewz">
                                       <div class="_4gelgl">
                                         238 locals recommend<span
-                                          class="text_highlight dir dir-ltr"
+                                          class="text-highlight dir dir-ltr"
                                           >, </span
                                         ><span aria-hidden="true"> · </span
                                         ><button
@@ -1263,7 +1263,7 @@
                                                       <span
                                                         class="card-alt-4__price dir dir-ltr"
                                                         ><span
-                                                          class="text_highlight dir dir-ltr"
+                                                          class="text-highlight dir dir-ltr"
                                                           >Price:</span
                                                         >₱3,858</span
                                                       ></span
@@ -1519,7 +1519,7 @@
                                                       <span
                                                         class="card-alt-4__price dir dir-ltr"
                                                         ><span
-                                                          class="text_highlight dir dir-ltr"
+                                                          class="text-highlight dir dir-ltr"
                                                           >Price:</span
                                                         >₱2,516</span
                                                       ></span
@@ -1775,7 +1775,7 @@
                                                       <span
                                                         class="card-alt-4__price dir dir-ltr"
                                                         ><span
-                                                          class="text_highlight dir dir-ltr"
+                                                          class="text-highlight dir dir-ltr"
                                                           >Price:</span
                                                         >₱6,038</span
                                                       ></span
@@ -16642,7 +16642,7 @@
                                         id="address-row-title"
                                         class="_gw4xx4"
                                       >
-                                        <span class="text_highlight dir dir-ltr"
+                                        <span class="text-highlight dir dir-ltr"
                                           >Location</span
                                         >
                                         <div>22706 Pacific Coast Hwy</div>
@@ -16913,7 +16913,7 @@
                           </section>
                         </div>
                         <div class="footer__copyright">
-                          <span class="text_highlight dir dir-ltr"
+                          <span class="text-highlight dir dir-ltr"
                             >Footer section</span
                           >
                           <section>
@@ -16922,7 +16922,7 @@
                                 <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text_highlight dir dir-ltr"
+                                      <span class="text-highlight dir dir-ltr"
                                         >Choose a language</span
                                       ><span class="_14tkmhr"
                                         ><svg
@@ -16947,7 +16947,7 @@
                                     </button></span
                                   ><span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text_highlight dir dir-ltr"
+                                      <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="_14tkmhr"
                                         ><span class="_pgfqnw">₱</span></span
@@ -16988,7 +16988,7 @@
                                 <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text_highlight dir dir-ltr"
+                                      <span class="text-highlight dir dir-ltr"
                                         >Choose a language</span
                                       ><span class="_14tkmhr"
                                         ><svg
@@ -17013,7 +17013,7 @@
                                     </button></span
                                   ><span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text_highlight dir dir-ltr"
+                                      <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="_14tkmhr"
                                         ><span class="_pgfqnw">₱</span></span
@@ -17169,7 +17169,7 @@
                                 <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text_highlight dir dir-ltr"
+                                      <span class="text-highlight dir dir-ltr"
                                         >Choose a language</span
                                       ><span class="_14tkmhr"
                                         ><svg
@@ -17194,7 +17194,7 @@
                                     </button></span
                                   ><span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text_highlight dir dir-ltr"
+                                      <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="_14tkmhr"
                                         ><span class="_pgfqnw">₱</span></span
