--- a/reviews.html
+++ b/reviews.html
@@ -65,7 +65,7 @@
                         </div>
                       </div>
                       <div class="_1mejhadq" data-testid="children">
-                        <span class="text_highlight dir dir-ltr" tabindex="-1"
+                        <span class="text-highlight dir dir-ltr" tabindex="-1"
                           >Step 1</span
                         >
                       </div>
@@ -360,7 +360,7 @@
                                 </section>
                               </div>
                               <div>
-                                <span class="text_highlight dir dir-ltr"></span>
+                                <span class="text-highlight dir dir-ltr"></span>
                                 <div class="_1xykmvt">
                                   <div class="_1udzt2s hidden-md">
                                     <div
@@ -790,7 +790,7 @@
                               <div class="_1fopc40">
                                 <fieldset class="_128xze2">
                                   <legend class="_1gyjybc">
-                                    <span class="text_highlight dir dir-ltr"
+                                    <span class="text-highlight dir dir-ltr"
                                       >Was anything extra special?</span
                                     >
                                   </legend>
@@ -1141,7 +1141,7 @@
                                 </section>
                               </div>
                               <div class="_1fopc40">
-                                <span class="text_highlight dir dir-ltr"
+                                <span class="text-highlight dir dir-ltr"
                                   >What could have been better?</span
                                 >
                                 <div
@@ -1155,7 +1155,7 @@
                                     id="improvement_tags_toggle_button_row-DLS-chipGroup-label"
                                   >
                                     <span
-                                      class="text_highlight dir dir-ltr"
+                                      class="text-highlight dir dir-ltr"
                                       id="chipGroupLabel"
                                       aria-hidden="true"
                                       >What could have been better?</span
