--- a/submission/wwd.html
+++ b/submission/wwd.html
@@ -1100,7 +1100,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                                 >
                                   <span aria-hidden="true">574/1400</span
                                   ><span
-                                    class="text_highlight dir dir-ltr"
+                                    class="text-highlight dir dir-ltr"
                                     aria-atomic="true"
                                     aria-live="polite"
                                     >574 out of 1400 characters used</span
