--- a/transaction_history.html
+++ b/transaction_history.html
@@ -195,7 +195,7 @@
                                                 id="Chip-controlled-DLS-chipGroup-label"
                                               >
                                                 <span
-                                                  class="text_highlight dir dir-ltr"
+                                                  class="text-highlight dir dir-ltr"
                                                   >Menu</span
                                                 >
                                               </div>
