--- a/become-a-host/floor-plan.html
+++ b/become-a-host/floor-plan.html
@@ -566,7 +566,7 @@
                 <div class="_1px78l2">
                   <div class="_11go4zx">
                     <div class="flex-items-center">
-                      <span class="text_highlight dir dir-ltr"
+                      <span class="text-highlight dir dir-ltr"
                         >Your progress: step 4 out of 10.</span
                       >
                       <div class="_9kv7q8">
