--- a/edit/what.html
+++ b/edit/what.html
@@ -448,7 +448,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                             <span aria-hidden="true"
                                               >519/1400</span
                                             ><span
-                                              class="text_highlight dir dir-ltr"
+                                              class="text-highlight dir dir-ltr"
                                               aria-atomic="true"
                                               aria-live="polite"
                                               >519 out of 1400 characters
