--- a/experiences.html
+++ b/experiences.html
@@ -2124,7 +2124,7 @@
       .dir-rtl.atm_gz_1y44olf.atm_gz_1y44olf {
         margin-right: 4px;
       }
-      .text_highlight[class][class] {
+      .text-highlight[class][class] {
         -webkit-clip: rect(0 0 0 0);
         clip: rect(0 0 0 0);
         -webkit-clip-path: inset(100%);
@@ -2136,7 +2136,7 @@
         white-space: nowrap;
         width: 1px;
       }
-      .dir.text_highlight[class][class] {
+      .dir.text-highlight[class][class] {
         border: 0;
         padding: 0;
       }
@@ -4010,7 +4010,7 @@
                               <div class="flex-item">
                                 <div></div>
                               </div></div></span
-                          ><span class="text_highlight dir dir-ltr"
+                          ><span class="text-highlight dir dir-ltr"
                             >Experience hosting dashboard</span
                           >
                         </button>
@@ -4905,14 +4905,14 @@
                     </section>
                   </div>
                   <div class="footer__copyright">
-                    <span class="text_highlight dir dir-ltr">Footer section</span>
+                    <span class="text-highlight dir dir-ltr">Footer section</span>
                     <section>
                       <div class="_1udzt2s">
                         <div class="_p03egf">
                           <div class="flex">
                             <span class="_19c5bku"
                               ><button type="button" class="_f2hxk3s">
-                                <span class="text_highlight dir dir-ltr"
+                                <span class="text-highlight dir dir-ltr"
                                   >Choose a language</span
                                 ><span class="_14tkmhr"
                                   ><svg
@@ -4935,7 +4935,7 @@
                               </button></span
                             ><span class="_19c5bku"
                               ><button type="button" class="_f2hxk3s">
-                                <span class="text_highlight dir dir-ltr"
+                                <span class="text-highlight dir dir-ltr"
                                   >Choose a currency</span
                                 ><span class="_14tkmhr"
                                   ><span class="_pgfqnw">₱</span></span
@@ -4973,7 +4973,7 @@
                           <div class="flex">
                             <span class="_19c5bku"
                               ><button type="button" class="_f2hxk3s">
-                                <span class="text_highlight dir dir-ltr"
+                                <span class="text-highlight dir dir-ltr"
                                   >Choose a language</span
                                 ><span class="_14tkmhr"
                                   ><svg
@@ -4996,7 +4996,7 @@
                               </button></span
                             ><span class="_19c5bku"
                               ><button type="button" class="_f2hxk3s">
-                                <span class="text_highlight dir dir-ltr"
+                                <span class="text-highlight dir dir-ltr"
                                   >Choose a currency</span
                                 ><span class="_14tkmhr"
                                   ><span class="_pgfqnw">₱</span></span
@@ -5143,7 +5143,7 @@
                           <div class="flex">
                             <span class="_19c5bku"
                               ><button type="button" class="_f2hxk3s">
-                                <span class="text_highlight dir dir-ltr"
+                                <span class="text-highlight dir dir-ltr"
                                   >Choose a language</span
                                 ><span class="_14tkmhr"
                                   ><svg
@@ -5166,7 +5166,7 @@
                               </button></span
                             ><span class="_19c5bku"
                               ><button type="button" class="_f2hxk3s">
-                                <span class="text_highlight dir dir-ltr"
+                                <span class="text-highlight dir dir-ltr"
                                   >Choose a currency</span
                                 ><span class="_14tkmhr"
                                   ><span class="_pgfqnw">₱</span></span
