--- a/payments/guest-contributions.html
+++ b/payments/guest-contributions.html
@@ -1262,7 +1262,7 @@
                           </section>
                         </div>
                         <div class="footer__copyright">
-                          <span class="text_highlight dir dir-ltr"
+                          <span class="text-highlight dir dir-ltr"
                             >Footer section</span
                           >
                           <section>
@@ -1271,7 +1271,7 @@
                                 <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text_highlight dir dir-ltr"
+                                      <span class="text-highlight dir dir-ltr"
                                         >Choose a language</span
                                       ><span class="_14tkmhr"
                                         ><svg
@@ -1296,7 +1296,7 @@
                                     </button></span
                                   ><span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text_highlight dir dir-ltr"
+                                      <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="_14tkmhr"
                                         ><span class="_pgfqnw">₱</span></span
@@ -1337,7 +1337,7 @@
                                 <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text_highlight dir dir-ltr"
+                                      <span class="text-highlight dir dir-ltr"
                                         >Choose a language</span
                                       ><span class="_14tkmhr"
                                         ><svg
@@ -1362,7 +1362,7 @@
                                     </button></span
                                   ><span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text_highlight dir dir-ltr"
+                                      <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="_14tkmhr"
                                         ><span class="_pgfqnw">₱</span></span
@@ -1518,7 +1518,7 @@
                                 <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text_highlight dir dir-ltr"
+                                      <span class="text-highlight dir dir-ltr"
                                         >Choose a language</span
                                       ><span class="_14tkmhr"
                                         ><svg
@@ -1543,7 +1543,7 @@
                                     </button></span
                                   ><span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text_highlight dir dir-ltr"
+                                      <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="_14tkmhr"
                                         ><span class="_pgfqnw">₱</span></span
