--- a/signup_login.html
+++ b/signup_login.html
@@ -1823,7 +1823,7 @@
                                         </div>
                                       </div>
                                       <span
-                                        class="text_highlight dir dir-ltr"
+                                        class="text-highlight dir dir-ltr"
                                         aria-atomic="true"
                                         aria-live="polite"
                                       ></span>
@@ -1937,7 +1937,7 @@
                                         </div>
                                       </div>
                                       <span
-                                        class="text_highlight dir dir-ltr"
+                                        class="text-highlight dir dir-ltr"
                                         aria-atomic="true"
                                         aria-live="polite"
                                       ></span>
@@ -2872,7 +2872,7 @@
                                         id="airlock-inline-container"
                                         aria-live="polite"
                                       ></div>
-                                      <span class="text_highlight dir dir-ltr"
+                                      <span class="text-highlight dir dir-ltr"
                                         >Opt out of marketing from Airbnb using
                                         the check box after the button labeled
                                         Agree and Continue on this page</span
@@ -4861,7 +4861,7 @@
                                       </div>
                                     </div>
                                     <span
-                                      class="text_highlight dir dir-ltr"
+                                      class="text-highlight dir dir-ltr"
                                       aria-atomic="true"
                                       aria-live="polite"
                                     ></span>
@@ -4975,7 +4975,7 @@
                                       </div>
                                     </div>
                                     <span
-                                      class="text_highlight dir dir-ltr"
+                                      class="text-highlight dir dir-ltr"
                                       aria-atomic="true"
                                       aria-live="polite"
                                     ></span>
@@ -5899,7 +5899,7 @@
                                       id="airlock-inline-container"
                                       aria-live="polite"
                                     ></div>
-                                    <span class="text_highlight dir dir-ltr"
+                                    <span class="text-highlight dir dir-ltr"
                                       >Opt out of marketing from Airbnb using
                                       the check box after the button labeled
                                       Agree and Continue on this page</span
@@ -6216,7 +6216,7 @@
                           </section>
                         </div>
                         <div class="footer__copyright">
-                          <span class="text_highlight dir dir-ltr"
+                          <span class="text-highlight dir dir-ltr"
                             >Footer section</span
                           >
                           <section>
@@ -6225,7 +6225,7 @@
                                 <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text_highlight dir dir-ltr"
+                                      <span class="text-highlight dir dir-ltr"
                                         >Choose a language</span
                                       ><span class="_14tkmhr"
                                         ><svg
@@ -6250,7 +6250,7 @@
                                     </button></span
                                   ><span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text_highlight dir dir-ltr"
+                                      <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="_14tkmhr"
                                         ><span class="_pgfqnw">₱</span></span
@@ -6291,7 +6291,7 @@
                                 <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text_highlight dir dir-ltr"
+                                      <span class="text-highlight dir dir-ltr"
                                         >Choose a language</span
                                       ><span class="_14tkmhr"
                                         ><svg
@@ -6316,7 +6316,7 @@
                                     </button></span
                                   ><span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text_highlight dir dir-ltr"
+                                      <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="_14tkmhr"
                                         ><span class="_pgfqnw">₱</span></span
@@ -6472,7 +6472,7 @@
                                 <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text_highlight dir dir-ltr"
+                                      <span class="text-highlight dir dir-ltr"
                                         >Choose a language</span
                                       ><span class="_14tkmhr"
                                         ><svg
@@ -6497,7 +6497,7 @@
                                     </button></span
                                   ><span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text_highlight dir dir-ltr"
+                                      <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="_14tkmhr"
                                         ><span class="_pgfqnw">₱</span></span
