--- a/trips.html
+++ b/trips.html
@@ -891,7 +891,7 @@
                           </section>
                         </div>
                         <div class="footer__copyright">
-                          <span class="text_highlight dir dir-ltr"
+                          <span class="text-highlight dir dir-ltr"
                             >Footer section</span
                           >
                           <section>
@@ -900,7 +900,7 @@
                                 <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text_highlight dir dir-ltr"
+                                      <span class="text-highlight dir dir-ltr"
                                         >Choose a language</span
                                       ><span class="_14tkmhr"
                                         ><svg
@@ -925,7 +925,7 @@
                                     </button></span
                                   ><span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text_highlight dir dir-ltr"
+                                      <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="_14tkmhr"
                                         ><span class="_pgfqnw">₱</span></span
@@ -966,7 +966,7 @@
                                 <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text_highlight dir dir-ltr"
+                                      <span class="text-highlight dir dir-ltr"
                                         >Choose a language</span
                                       ><span class="_14tkmhr"
                                         ><svg
@@ -991,7 +991,7 @@
                                     </button></span
                                   ><span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text_highlight dir dir-ltr"
+                                      <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="_14tkmhr"
                                         ><span class="_pgfqnw">₱</span></span
@@ -1150,7 +1150,7 @@
                                 <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text_highlight dir dir-ltr"
+                                      <span class="text-highlight dir dir-ltr"
                                         >Choose a language</span
                                       ><span class="_14tkmhr"
                                         ><svg
@@ -1175,7 +1175,7 @@
                                     </button></span
                                   ><span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text_highlight dir dir-ltr"
+                                      <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="_14tkmhr"
                                         ><span class="_pgfqnw">₱</span></span
